# DB-tuning

./: .gitignore  2021-04-26_23-32-33_output.csv  Ax_optimizer.ipynb  Benchmark.py  Hypermapper_optimizer.ipynb  README.md  background.sh  background_2.sh  benchmark.py  benchmark_commands.py  cass.py  cassandra_rw90_1.csv  config.py  evaluate.bat  feat_cass_1.csv  hm_to_cave.py  hypermapper_results.md  internal_tool_test.txt  knobs.md  latencies.md  main.py  mixgraph.py  mixgraph_1.md  optimizer_scenario.json  options_file.ini  options_file_template_default.ini  parameters.py  plot.py  plot_importance.py  plot_latency.py  plot_output.py  plot_throughput.py  pre_optimizer.py  preparation_benchmarks.md  requirements.txt  requirements_conda.txt  run_ax.py  run_from_configs.py  run_hypermapper.py  run_manual.py  (+14 more)
can-be-useful/: tut_bayes_opt.ipynb  utils.py
docs/: knobs.md  run_tests.md  workflow-linux.md  workflow-windows.md
ldbc_snb_files/: benchmark.properties  environment-variables-default.sh  parse.py  program.sh  start-neo4j.sh
manual-results/: latencies.md
notes_and_docs/: OLD_knobs.md  cave_commands.md  running_in_background.md  workflow-linux.md
old-tests/: mixgraph_50M_threading32.md  mixgraph_filling_sanity.md  mixgraph_with_filling_april_21.md  random_Random1M_threading32.md
optimizer-output/: 1_feature_importance_50-50.csv  1_mixgraph.csv  1_mixgraph_2.csv  1_optimizer_10-90.csv  1_optimizer_50-50.csv  1_optimizer_90-10.csv  1_readrandomwriterandom_2.csv  2_ftimp_1.csv  (+41 more)
rocksdb-with-visual-studio/rocksdb-tuning/: .vcxproj  CMakeLists.txt  config.json
(+314 files in other folders)
